--- a/src/static/layout.css
+++ b/src/static/layout.css
@@ -2,3 +2,54 @@
     display: flex;
     flex-direction: row;
 }
+
+.vbox{
+    display: flex;
+    flex-direction: column;
+}
+
+.centered {
+    justify-content: center;
+}
+
+#paris {
+    justify-content: center;
+}
+
+#graph_box {
+    margin-top: 30px;
+    justify-content: center;
+}
+
+#climate_state {
+    padding:20px;
+    border-style: solid;
+    border-width: thin;
+}
+#climate_state h1{
+    margin-top: 5px;
+    text-align: center;
+}
+
+#climate_state h2{
+    text-align: center;
+    font-size: smaller;
+}
+
+#climate_box {
+    justify-content: center;
+}
+
+#climate_box > .hbox {
+    justify-content: center;
+}
+
+#climate_box .description{
+    font-size: small;
+    width: 500px;
+}
+#climate_box .description h4{
+    margin-top: 40px;
+    margin-bottom: 0;
+    text-align: center;
+}
